modules/apps/langfuse/gateway_routing/manifests/langfuse.HTTPRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: langfuse
  namespace: langfuse
spec:
  parentRefs:
  - name: langfuse-gateway
    sectionName: https
  hostnames:
  - ${LANGFUSE_HOSTNAME}
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: langfuse-web
      port: 3000
